--- a/juc-learning/pom.xml
+++ b/juc-learning/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1.1-jre</version>
+        </dependency>
     </dependencies>
 
 </project>
